<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoros2_behavior_tree</name>
  <version>0.0.0</version>
  <description>
    Behavior tree nodes for interacting with MotoROS2
  </description>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_ros2</depend>
  <depend>motoros2_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
